<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="minVersion">3</string>
    <string name="version">Beta 1098</string>
    <string name="app_name">CityPark</string>
<string name="plan_msg">Planning route&#8230;</string>
<string name="load_stands_msg">Loading Info&#8230;</string>
<string name="planfail_msg">Route planning failed.</string>
<string name="ok">OK</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="arg_error_msg">Illegal argument.</string>
<string name="io_error_msg">Failed to connect to service.</string>
<string name="response_error_msg">Bad server response.</string>
<string name="result_error_msg">Address not found.</string>
<string name="fix_msg">Waiting for GPS fix&#8230;</string>
<string name="fix_failed_msg">GPS fix failed</string>
<string name="send_msg">Sending&#8230;</string>
<string name="showdirections">Show directions</string>
<string name="to">to</string>


<string name="app_name_itemizedoverlay">OSMViewer ItemizedOverlay</string>
    
<string name="unknown">Unknown</string>
<string name="map_mode">Map mode</string>
<string name="my_location">My location</string>
<string name="samples">Samples</string>
<string name="about">About</string>
<string name="about_message">&lt;b&gt;&lt;a href=&quot;http://cityparkmobile.com&quot;&gt;CityPark&lt;/a&gt; 
     - The application that will help you find low cost nearby on street and parking lots parking.&lt;/b&gt;
    &lt;a href=&quot;http://cityparkmobile.com&quot;&gt;CityPark&lt;/a&gt; uses map and routing provided by &lt;a href=&quot;http://google.com&quot;&gt;Google&lt;/a&gt;.</string>


<string name="about_menu">About</string>
<string name="cs_copyright">Route planning by CycleStreets.net</string>
<string name="replan_title">Replan</string>
<string name="gps_msg">Show location options?</string>
<string name="gps_msg_title">GPS is disabled</string>


<string name="debug_tag">OPENSTREETMAP</string>
<string name="plan_failed_speech">Planning failed.</string>
<string name="bike_alert_intent">com.citypark.BIKE_ALERT</string>
<string name="prefs_units">unitsPref</string>
<string name="km">km</string>
<string name="meters">m</string>
<string name="ft">ft</string>

<string name="replan">replan</string>
<string name="arrived">Arrived</string>
<string name="point">point</string>
<string name="notify_title">CityPark</string>
<string name="navigation_intent">com.citypark.service.LocationService</string>
<string name="replanning">Replanning...</string>
<string name="stop_nav_title">Exit</string>
<string name="arrived_speech">You have reached your destination.</string>
<string name="jump_intent">jump</string>
<string name="share_chooser_title">Share Using</string>
<string name="cs_jump">http://cycle.st/j</string>
<string name="thanks_message">Thanks for your feedback!</string>
<string name="feedback_fail_message">Apologies, your feedback could not be submitted.</string>
<string name="export_title">Send to another CityPark user</string>
<string name="share_url_title">Share on CycleStreets.net</string>
<string name="export_gpx_title">Share as GPX</string>
<string name="sharing_title">Share</string>
<string name="filename">route.citypark</string>
<string name="filename_gpx">route.gpx</string>
<string name="planfail_network_msg">No response from routing service.</string>
<string name="save_hint">Nickname</string>
<string name="load_msg">Loading Info...</string>
<string name="pref_disable_acra">Disable Error Reporting</string>

<string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
<string name="crash_notif_title">CityPark has crashed</string>
<string name="crash_notif_text">Please click here to help fix the issue.</string>
        
<string name="crash_dialog_title">CityPark has crashed</string>
<string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click \'OK\'.</string>
<string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
<string name="crash_dialog_ok_toast">Thank you!</string>
<string name="geocodeerror">Address not recognised.</string>
<string name="geocodeconnecterror">No response from geocoding service.</string>
<string name="tts_msg">Spoken directions require text to speech to be installed. Install now?</string>
<string name="tts_msg_title">Text to Speech</string>

<string name="email_hint">user@domain</string>
<string name="password">Password</string>
<string name="last_name">Last name</string>
<string name="first_name">First name</string>
<string name="license_plate">License plate</string>
<string name="register">Register</string>
<string name="registration_succeeded">Registration Succeeded</string>
<string name="registration_failed">Registration Failed</string>
<string name="registration_missing_fields">Required parameters</string>
<string name="email_invalid">Invalid email</string>
<string name="payment_method">Payment Method</string>
<string name="payment_method_not_defined">Payment Method not set</string>
<string name="reminder_button">Set Reminder</string>
<string name="reminder_button_unset">Unset Reminder</string>
<string name="start_payment">Start Payment</string>
<string name="payment_progress">Payment in progress</string>
<string name="payment_succeeded">Payment succeeded</string>
<string name="payment_failes">Payment failed</string>
<string name="skip_payment">Skip</string>
<string name="stop_payment">Stop Payment</string>
<string name="time_limit_reached">time limit reached</string>
<string name="awaiting_login">Awaiting login</string>
<string name="login_failed">Login Failed</string>

<string name="phone_number">Phone number</string>
<string name="city">City</string>
<string name="parking_zone">Parking Zone</string>
<string name="currency"> nis </string>
<string name="unpark">unpark</string>
<string name="reminder_intent">reminder_intent</string>
<string name="park_ack">Have you parked?</string>
<string name="unpark_ack">Have you un-parked?</string>

<string name="first_hour">First Hour</string>
<string name="all_day">All day</string>
<string name="garage_name">Name</string>
<string name="distance">Distance</string>
<string name="share_citypark">Checkout this great parking app - </string>
<string name="citypark_website">http://cityparkmobile.wordpress.com</string>

<string name="parking_free">Free</string>
<string name="report_garage_free">Report Free</string>
<string name="report_garage_busy">Report Busy</string>

<string name="no_garages_found">No parking lots found</string>
<string name="thanks_for_reporting">Thanks for reporting parking status.</string>

<string name="facebook_message">CityPark - The application that will help you find low cost nearby on street and parking lots parking. Check the Android application http://play.google.com/store/apps/details?id=com.citypark</string>
<string name="facebook_description">CityPark - Just Parked!</string>

</resources>
