<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" android:background="@drawable/background">
        
        <ImageView
		    android:id="@+id/imageViewLogo"
		    android:layout_width="fill_parent"
		    android:layout_height="40dp"
		    android:layout_gravity="center_horizontal"
		    android:gravity="top"
		    android:src="@drawable/logo" />

        <EditText
            android:id="@+id/id_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/id_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/id_firstname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/id_lastname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/id_licenseplate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/license_plate" android:inputType="textCapCharacters"/>

        <Button
            android:id="@+id/id_payment_method"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/payment_method" 
            android:layout_marginTop="10dp" 
            android:layout_gravity="center_horizontal" android:clickable="true" android:onClick="OnPaymenMethodClick"/>

        <Button
            android:id="@+id/id_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/register" 
            android:onClick="onRegister"/>
    </LinearLayout>

</LinearLayout>