<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ImageView
	    android:id="@+id/imageViewLogo"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:layout_gravity="center_horizontal"
	    android:gravity="top"
	    android:src="@drawable/logo" />

    <ToggleButton
        android:id="@+id/toggleButtonPay"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="ToggleButton" android:layout_gravity="center_horizontal" android:textOn="@string/stop_payment" android:textOff="@string/start_payment" android:layout_marginTop="30dp" android:onClick="OnPay"/>

    <ProgressBar
        android:id="@+id/progressBarPayment"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:tag="@string/payment_progress" android:layout_gravity="center_vertical|center_horizontal" android:layout_marginTop="10dp" android:visibility="invisible"/>

    <TextView
        android:id="@+id/textViewPaymentMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp" android:textSize="30dp" android:visibility="invisible"/>

    <TimePicker
        android:id="@+id/timePickerEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"/>

    <ToggleButton
        android:id="@+id/toggleButtonRemind"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" 
        android:layout_marginTop="20dp" android:text="@string/reminder_button" android:textOff="@string/reminder_button" android:textOn="@string/reminder_button" android:onClick="OnRemind"/>

</LinearLayout>